# amplifier-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  PLAYGROUND_DEMO.md  README.md  RELEASE_NOTES_v1.0.0.md  blog-post-amplifier-sdk.md  bundle.md  package-lock.json  package.json  tsconfig.json
.amplifier/: AGENTS.md
amplifier-server/: README.md  pyproject.toml
amplifier-server/src/amplifier_server/: __init__.py  config.py  main.py
amplifier-server/src/amplifier_server/api/: __init__.py  agents.py  health.py  modules.py  recipes.py
amplifier-server/src/amplifier_server/core/: __init__.py  auth.py  config_translator.py  module_resolver.py  recipe_manager.py  session_manager.py
amplifier-server/src/amplifier_server/models/: __init__.py  requests.py  responses.py
amplifier-server/tests/: conftest.py  test_agents.py  test_health.py  test_recipes.py
examples/: test-sdk-cli.mjs
examples/agent-playground/: README.md  SDK_NOTES.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  test-client-tools.ts  test-sdk-features.ts  vite.config.ts
examples/agent-playground/src/: App.tsx  styles.css
examples/chat-app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
examples/chat-app/src/: App.tsx  client.ts  styles.css
recipes/: playground-integration.yaml  sdk-documentation.yaml  sdk-feature-development.yaml  sdk-implementation.yaml
runtime/: .gitignore  README.md  pyproject.toml
runtime/src/amplifier_app_runtime/: __init__.py  app.py  bundles.py  cli.py  events.py  routes.py  sessions.py  store.py  streaming.py
runtime/tests/: conftest.py  test_events.py  test_routes.py  test_sessions.py
sdks/: API_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  SECURITY.md  TESTING.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/amplifier_sdk/: __init__.py  agent.py  catalog.py  client.py  models.py  recipes.py  types.py
sdks/python/tests/: __init__.py  test_agent.py  test_agent_spawning_visibility.py  test_behaviors.py  test_client.py  test_hooks_mcp.py  test_models.py  test_recipes.py  test_sub_agent_config.py  test_thinking_stream.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: agent.ts  catalog.ts  client.ts  index.ts  recipes.ts  types.ts
sdks/typescript/tests/: agent-spawning-visibility.test.ts  agent.test.ts  behaviors.test.ts  client-tool-schemas.test.ts  client.test.ts  error-handling.test.ts  hooks-mcp.test.ts  integration.test.ts  recipes.test.ts  sub-agent-config.test.ts  thinking-stream.test.ts  types.test.ts
src/: client.ts  types.ts
src/__tests__/: catalog.test.ts  recipes.test.ts  types.test.ts
