[project]
name = "amplifier-app-runtime"
version = "0.1.0"
description = "Amplifier backend server - HTTP API with event streaming for AI agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
keywords = ["amplifier", "ai", "agent", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "amplifier-core",
    "amplifier-foundation",
    # Essential runtime modules (orchestrator + context)
    "amplifier-module-loop-streaming",
    "amplifier-module-context-simple",
    # Tool modules bundled with the runtime
    "amplifier-module-tool-filesystem",
    "amplifier-module-tool-bash",
    "amplifier-module-tool-search",
    "amplifier-module-tool-web",
    "amplifier-module-tool-todo",
    "amplifier-module-tool-mcp",
    # Provider modules bundled with the runtime
    "amplifier-module-provider-anthropic",
    "amplifier-module-provider-openai",
    "amplifier-module-provider-azure-openai",
    "amplifier-module-provider-gemini",
    "amplifier-module-provider-ollama",
    "amplifier-module-provider-vllm",
]

[project.scripts]
amplifier-runtime = "amplifier_app_runtime.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_runtime"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyright>=1.1.380",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic", branch = "main" }
amplifier-module-provider-openai = { git = "https://github.com/microsoft/amplifier-module-provider-openai", branch = "main" }
amplifier-module-provider-azure-openai = { git = "https://github.com/microsoft/amplifier-module-provider-azure-openai", branch = "main" }
amplifier-module-provider-gemini = { git = "https://github.com/microsoft/amplifier-module-provider-gemini", branch = "main" }
amplifier-module-provider-ollama = { git = "https://github.com/microsoft/amplifier-module-provider-ollama", branch = "main" }
amplifier-module-provider-vllm = { git = "https://github.com/microsoft/amplifier-module-provider-vllm", branch = "main" }
amplifier-module-tool-filesystem = { git = "https://github.com/microsoft/amplifier-module-tool-filesystem", branch = "main" }
amplifier-module-tool-bash = { git = "https://github.com/microsoft/amplifier-module-tool-bash", branch = "main" }
amplifier-module-tool-search = { git = "https://github.com/microsoft/amplifier-module-tool-search", branch = "main" }
amplifier-module-tool-web = { git = "https://github.com/microsoft/amplifier-module-tool-web", branch = "main" }
amplifier-module-tool-todo = { git = "https://github.com/microsoft/amplifier-module-tool-todo", branch = "main" }
amplifier-module-tool-mcp = { git = "https://github.com/microsoft/amplifier-module-tool-mcp", branch = "main" }
amplifier-module-loop-streaming = { git = "https://github.com/microsoft/amplifier-module-loop-streaming", branch = "main" }
amplifier-module-context-simple = { git = "https://github.com/microsoft/amplifier-module-context-simple", branch = "main" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]
# The acp package (agent-client-protocol) doesn't ship with type stubs
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = ["ignore::DeprecationWarning"]
