[project]
name = "amplifier-sdk"
version = "1.0.0"
description = "Python SDK for amplifier-app-runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amplifier Team" }]
keywords = ["amplifier", "ai", "agent", "sdk"]
dependencies = [
    "httpx>=0.27.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/manojp99/amplifier-sdk"
Documentation = "https://github.com/manojp99/amplifier-sdk/blob/main/sdks/API_REFERENCE.md"
Repository = "https://github.com/manojp99/amplifier-sdk"
"Bug Tracker" = "https://github.com/manojp99/amplifier-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
